// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`filterHistoryEntries > snapshots entries for combined alert, event, and severity filters 1`] = `
[
  {
    "config": {
      "id": "garage",
      "name": "Garage door",
    },
    "event": {
      "details": {
        "source": "sensor",
      },
      "event_id": "event_garage",
      "flow_id": "flow_garage",
      "message": "The garage is open",
      "timestamp": "2026-01-01T00:00:00+00:00",
      "type": "notification_sent",
    },
  },
]
`;

exports[`filterHistoryEntries > snapshots entries for event content search 1`] = `
[
  {
    "config": {
      "id": "water",
      "name": "Water leak",
    },
    "event": {
      "details": {
        "error": "Device unavailable",
      },
      "event_id": "event_water",
      "message": "Could not notify",
      "timestamp": "2026-01-01T00:00:00+00:00",
      "type": "delivery_failed",
    },
  },
]
`;

exports[`filterHistoryEntries > snapshots entries for no active filters 1`] = `
[
  {
    "config": {
      "id": "garage",
      "name": "Garage door",
    },
    "event": {
      "details": {
        "source": "sensor",
      },
      "event_id": "event_garage",
      "flow_id": "flow_garage",
      "message": "The garage is open",
      "timestamp": "2026-01-01T00:00:00+00:00",
      "type": "notification_sent",
    },
  },
  {
    "config": {
      "id": "water",
      "name": "Water leak",
    },
    "event": {
      "details": {
        "error": "Device unavailable",
      },
      "event_id": "event_water",
      "message": "Could not notify",
      "timestamp": "2026-01-01T00:00:00+00:00",
      "type": "delivery_failed",
    },
  },
]
`;

exports[`history view element > renders the registered history view 1`] = `
{
  "count": undefined,
  "entries": [
    {
      "badge": "notification sent",
      "flow": "Flow flow_garage",
      "hasDetails": true,
      "title": "Garage door",
    },
    {
      "badge": "delivery failed",
      "flow": undefined,
      "hasDetails": true,
      "title": "Water leak",
    },
  ],
  "filters": [
    "Filter by event type",
    "Filter by severity",
    "Search history",
  ],
}
`;

exports[`historyDetailSummary > hides attempt-only details from the inline preview 1`] = `""`;

exports[`historyDetailSummary > keeps meaningful detail summaries visible 1`] = `"Device unavailable"`;
